// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn several workspaces 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`yarn several workspaces 2`] = `
Object {
  "files": Object {
    "index.html": Object {
      "offset": "0",
      "size": 841,
    },
    "index.js": Object {
      "offset": "841",
      "size": 4371,
    },
    "node_modules": Object {
      "files": Object {
        "electron-log": Object {
          "files": Object {
            "LICENSE": Object {
              "offset": "5522",
              "size": 1082,
            },
            "index.js": Object {
              "offset": "6604",
              "size": 140,
            },
            "lib": Object {
              "files": Object {
                "format.js": Object {
                  "offset": "9889",
                  "size": 1021,
                },
                "log.js": Object {
                  "offset": "10910",
                  "size": 877,
                },
                "transports": Object {
                  "files": Object {
                    "console.js": Object {
                      "offset": "11787",
                      "size": 343,
                    },
                    "file": Object {
                      "files": Object {
                        "find-log-path.js": Object {
                          "offset": "14425",
                          "size": 2078,
                        },
                        "get-app-name.js": Object {
                          "offset": "16503",
                          "size": 1780,
                        },
                        "index.js": Object {
                          "offset": "18283",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": Object {
                      "offset": "12130",
                      "size": 1751,
                    },
                    "renderer-console.js": Object {
                      "offset": "13881",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": Object {
              "offset": "6744",
              "size": 1343,
            },
            "package.json": Object {
              "offset": "8087",
              "size": 824,
            },
            "renderer.js": Object {
              "offset": "8911",
              "size": 978,
            },
          },
        },
        "ms": Object {
          "files": Object {
            "index.js": Object {
              "offset": "20351",
              "size": 2764,
            },
            "license.md": Object {
              "offset": "23115",
              "size": 1077,
            },
            "package.json": Object {
              "offset": "24192",
              "size": 469,
            },
          },
        },
      },
    },
    "package.json": Object {
      "offset": "5212",
      "size": 310,
    },
  },
}
`;

exports[`yarn workspace 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`yarn workspace 2`] = `
Object {
  "files": Object {
    "index.html": Object {
      "offset": "0",
      "size": 841,
    },
    "index.js": Object {
      "offset": "841",
      "size": 4371,
    },
    "node_modules": Object {
      "files": Object {
        "electron-log": Object {
          "files": Object {
            "LICENSE": Object {
              "offset": "5563",
              "size": 1082,
            },
            "index.js": Object {
              "offset": "6645",
              "size": 140,
            },
            "lib": Object {
              "files": Object {
                "format.js": Object {
                  "offset": "10531",
                  "size": 1021,
                },
                "log.js": Object {
                  "offset": "11552",
                  "size": 877,
                },
                "transports": Object {
                  "files": Object {
                    "console.js": Object {
                      "offset": "12429",
                      "size": 343,
                    },
                    "file": Object {
                      "files": Object {
                        "find-log-path.js": Object {
                          "offset": "15067",
                          "size": 2078,
                        },
                        "get-app-name.js": Object {
                          "offset": "17145",
                          "size": 1780,
                        },
                        "index.js": Object {
                          "offset": "18925",
                          "size": 2068,
                        },
                      },
                    },
                    "log-s.js": Object {
                      "offset": "12772",
                      "size": 1751,
                    },
                    "renderer-console.js": Object {
                      "offset": "14523",
                      "size": 544,
                    },
                  },
                },
              },
            },
            "main.js": Object {
              "offset": "6785",
              "size": 1343,
            },
            "package.json": Object {
              "offset": "8128",
              "size": 1425,
            },
            "renderer.js": Object {
              "offset": "9553",
              "size": 978,
            },
          },
        },
      },
    },
    "package.json": Object {
      "offset": "5212",
      "size": 351,
    },
  },
}
`;
